--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
         "react"
     ],
     "rules": {
+        "react/react-in-jsx-scope":0,
         "indent": [
             "error",
             "tab"
