--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "effector": "^22.8.6",
+    "effector-react": "^22.5.3",
+    "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -14,10 +18,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint" : "eslint src/*",
-    "lintf" : "eslint src/* --fix"
+    "lint": "eslint src/*",
+    "lint-fix": "eslint src/* --fix",
+    "start-backend": "json-server --watch db.json"
   },
   "eslintConfig": {
     "extends": [
@@ -38,7 +41,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.42.0",
-    "eslint-plugin-react": "^7.32.2"
+    "eslint": "^8.42.0"
   }
 }
