--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.5.2",
     "axios": "^1.4.0",
     "effector": "^22.8.6",
     "effector-react": "^22.5.3",
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.42.0"
+    "eslint": "^8.42.0",
+    "tailwindcss": "^3.3.2"
   }
 }
