--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start": "concurrently \"npm run start-backend\" \"npm run start-front\"",
-    "start-front": "PORT=3001 react-scripts start",
+    "start-front": "cross-env PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint src/*",
     "lint-fix": "eslint src/* --fix",
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.42.0",
     "eslint-plugin-only-warn": "^1.1.0",
     "tailwindcss": "^3.3.2"
