--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.63.5",
     "swiper": "^9.4.1",
     "web-vitals": "^2.1.4"
   },
